// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button renders correctly button text without hover 1`] = `
<div>
  <button
    class="sc-bcXHqe sc-jSUZER feNVH dkmCUq button-text-without-hover btn-lg button"
    style="padding: 0.65rem 1.25rem; font-size: 1.05rem;"
  />
</div>
`;

exports[`Button renders correctly button text-dark 1`] = `
<div>
  <button
    class="sc-bcXHqe sc-gKPRtg sc-ftTHYK feNVH hUzBlu hIdUJX button-text-dark btn-lg button"
    style="padding: 0.65rem 1.25rem; font-size: 1.05rem;"
  />
</div>
`;

exports[`Button renders correctly button text-light 1`] = `
<div>
  <button
    class="sc-bcXHqe sc-gKPRtg sc-iBYQkv feNVH hUzBlu YZIpJ button-text-light btn-lg button"
    style="padding: 0.65rem 1.25rem; font-size: 1.05rem;"
  />
</div>
`;

exports[`Button renders correctly icon button 1`] = `
<div>
  <button
    class="sc-bcXHqe sc-pyfCe feNVH hIOFrL icon-button btn-lg button"
    style="padding: 0.65rem 1.25rem; font-size: 1.05rem;"
  />
</div>
`;

exports[`Button renders correctly large size button 1`] = `
<div>
  <button
    class="sc-bcXHqe sc-gswNZR feNVH gHullA primary-light btn-lg button"
    style="padding: 0.65rem 1.25rem; font-size: 1.05rem;"
  />
</div>
`;

exports[`Button renders correctly medium size button 1`] = `
<div>
  <button
    class="sc-bcXHqe sc-gswNZR feNVH gHullA primary-light btn-md button"
    style="padding: 0.5850000000000001rem 1.125rem; font-size: 0.9500000000000001rem;"
  />
</div>
`;

exports[`Button renders correctly primary-dark button 1`] = `
<div>
  <button
    class="sc-bcXHqe sc-dkrFOg feNVH krmmpI primary-dark btn-lg button"
    style="padding: 0.65rem 1.25rem; font-size: 1.05rem;"
  />
</div>
`;

exports[`Button renders correctly primary-light button 1`] = `
<div>
  <button
    class="sc-bcXHqe sc-gswNZR feNVH gHullA primary-light btn-lg button"
    style="padding: 0.65rem 1.25rem; font-size: 1.05rem;"
  />
</div>
`;

exports[`Button renders correctly secondary-dark button 1`] = `
<div>
  <button
    class="sc-bcXHqe sc-eDvSVe feNVH cAJNIx secondary-dark btn-lg button"
    style="padding: 0.65rem 1.25rem; font-size: 1.05rem;"
  />
</div>
`;

exports[`Button renders correctly secondary-light button 1`] = `
<div>
  <button
    class="sc-bcXHqe sc-hLBbgP feNVH joABVS secondary-light btn-lg button"
    style="padding: 0.65rem 1.25rem; font-size: 1.05rem;"
  />
</div>
`;

exports[`Button renders correctly small size button 1`] = `
<div>
  <button
    class="sc-bcXHqe sc-gswNZR feNVH gHullA primary-light btn-sm button"
    style="padding: 0.52rem 1rem; font-size: 0.8500000000000001rem;"
  />
</div>
`;
